--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "app/app.py",
+            "program": "app.py",
             "console": "integratedTerminal",
             "justMyCode": true
         }
